# cbml_parser

./: .gitignore  README.md  Running_tests.txt  pyproject.toml
.github/workflows/: publish.yml
cbml_parser/: __init__.py  constants.py  exceptions.py  models.py  parser.py  validator.py
docs/: API_REFERENCE.md  CBML_STANDARD.md
tests/: conftest.py  test_parser.py  test_validator.py
tests/fixtures/: dialogue_heavy.cbml  invalid_dialogue_no_chars.cbml  invalid_missing_loc.cbml  invalid_undefined_slot.cbml  minimal.cbml  multi_page_action.cbml  single_page_preset.cbml  splash_narration.cbml
