[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cbml-parser"
version = "1.0.0"
description = "A parser for CBML (Comic Book Markup Language)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["comics", "cbml", "parser", "markup"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
"Homepage" = "https://github.com/yourname/cbml-parser"
"Bug Tracker" = "https://github.com/yourname/cbml-parser/issues"
"Documentation" = "https://github.com/yourname/cbml-parser/blob/main/docs/CBML_STANDARD.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["cbml_parser*"]